# my-linux-cots

./: .gitignore  Dockerfile  LICENSE.md  README.md
.devcontainer/: devcontainer.json
ModernCpp/DesignPatterns/: dp_notes.md
ModernCpp/DesignPatterns/Behavioral/Command/: Command.puml  main  main.cpp
ModernCpp/DesignPatterns/Behavioral/Iterator/: Iterator.puml  Makefile  main  main.cpp
ModernCpp/DesignPatterns/Behavioral/Observer/: Display.hpp  Makefile  Observer.hpp  (+5 more)
ModernCpp/LearningFromScratch/Practice/: add_gg.md  main  main.cpp
ModernCpp/LearningFromScratch/Practice/CB/tests/: CMakeLists.txt  circular_buffer_test.cpp
ModernCpp/LearningFromScratch/ReturnToBasics/: main  main.cpp
ModernCpp/SOLID/: BeagleBoneLED.h  LEDController.h  LEDInterface.h  RaspberryPiLED.h  main  main.cpp  solid.puml
doc/: A2Z.md  Building_Yocto_Image.md  README.md  U_Boot_Steps.md  boot_from_tftp.md
doc/Practice/vexpress-ca9x4/: README.md
doc/bashs/: busybox.sh  constants.sh  crossng.sh  linuxkernel.sh  qemu_run.sh  uboot.sh  utils.sh
doc/utils/: EnablingWifi_Steps  Fixing_BadSDCARD.txt  docker_as_system.sh  dp.sh  install.sh  install_docker.sh  make_tftp.sh  not_tested.txt  partition_config.json
doc/utils/bashs/: busybox.sh  constants.sh  crossng.sh  linuxkernel.sh  qemu_run.sh  sdcard.sh  setup_base_yocto.sh  uboot.sh  utils.sh
doc/utils/envsetup/: envsetup.py  envsetup.sh  envsetup.yaml  setup_base_yocto.sh
doc/utils/sec/: ssh_key_conn.bat  ssh_key_conn.sh
doc/utils/wxpkgm/: pkgm.sh  pkgs.json
qemu/: qemu-docker-run.sh
utils/: envsetup.py  envsetup.yaml
(+60 files in other folders)
